<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StudyRoomScheduler</string>
    <string name="title_placeholder">Title</string>
    <string name="main_title">Pick A Residence Hall</string>
    <string name="hall_content_description">Hall Image</string>
    <string name="room_placeholder">Room NaN</string>
    <string name="single_subtitle">Available Rooms</string>
    <string name="order_title_textview">Fill out the following: </string>
    <string name="room_label">Room: </string>
    <string name="name_label">Name:</string>
    <string name="name_text">Enter your name</string>
    <string name="netId_label">UWNetID: </string>
    <string name="netId_text">Enter your UWNetID</string>
    <string name="time_label">Time:</string>
    <string name="time_button">Choose Time</string>
    <array name="hall_titles">
        <item>Alder</item>
        <item>Elm</item>
        <item>Lander</item>
        <item>Maple</item>
        <item>Poplar</item>
        <item>Terry</item>
    </array>

    <array name="hall_images">
        <item>@drawable/alder</item>
        <item>@drawable/elm</item>
        <item>@drawable/lander</item>
        <item>@drawable/maple</item>
        <item>@drawable/poplar</item>
        <item>@drawable/terry</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
